Fix(core): Fix Border does not stretch vertically

--- a/core/src/border/border.module.css
+++ b/core/src/border/border.module.css
@@ -6,6 +6,7 @@
 	border-left-style: solid;
 	border-left-width: 1px;
 	align-self: stretch;
+	height: auto;
 }
 
 :global(.light) .weak {
